[package]
name = "playdate"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[dependencies]
playdate-sys = { path = "playdate-sys" }
anyhow = { version = "1.0", default-features = false }
heapless = "0.5.6"

[dependencies.cstr_core]
version = "0.2"
default-features = false
features = [ "alloc" ]

[workspace]
members = [ "playdate-sys" ]

[lib]
crate-type = [  "cdylib", "staticlib" ]

[profile.release]
panic = "abort"
