[package]
name = "playdate"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

[dependencies]
playdate-sys = { path = "playdate-sys" }
anyhow = { version = "1.0", default-features = false }
heapless = "0.5.6"

[dependencies.cstr_core]
version = "0.2"
default-features = false
features = [ "alloc" ]

[workspace]
members = [ "playdate-sys" ]

# [lib]
# crate-type = [ "staticlib", "cdylib" ]

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[build-dependencies]
cc = "1.0.0"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
crate-type = ["staticlib", "cdylib"]
