[package]
name = "playdate"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
playdate-sys = { path = "playdate-sys" }
anyhow = { version = "1", default-features = false }
cstr_core = { version = "0.2.3", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.4"
heapless = "0.7"

[workspace]
members = [ "playdate-sys" ]

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[build-dependencies]
cc = "1.0.0"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
crate-type = ["staticlib", "cdylib"]